--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,3 @@
-streamlit
-graphviz
-pandas
-plotly
-numpy
-matplotlib
-matplotlib-korean-font
-Pillow
+streamlit==1.38.0
+pandas==2.2.3
+plotly==5.24.1
